added keycloak integration to the existing code (RBAC)